[gd_scene load_steps=4 format=3 uid="uid://0ufy6c61bjw6"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_un6lu"]
[ext_resource type="Shader" path="res://Scenes/pause_menu.gdshader" id="2_7x7km"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o4e4t"]
shader = ExtResource("2_7x7km")
shader_parameter/amount = 1.0

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_un6lu")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_o4e4t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Resumir" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Exit to Menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit to Menu"

[node name="Exit to Desktop" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit to Desktop"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Resumir" to="." method="_on_resumir_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit to Menu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit to Desktop" to="." method="_on_exit_to_desktop_pressed"]
